--- a/kevin.css
+++ b/kevin.css
@@ -2,7 +2,7 @@ nav {
     background: linear-gradient(#fe9e78, #ee294b);
     border-radius: 0px 0px 10px 10px ;
     padding-bottom: 10px;
-    height: 8em;
+    height: 9em;
 }
 .list-nav {
     margin: 0;
@@ -15,8 +15,6 @@ nav {
 }
 .list-nav>li {
     float: left;
-    border-left: black;
-    border: 2px;
 }
 li a {
     display: block;
@@ -29,8 +27,8 @@ li a {
 }
 
 .logo {
-    width: 50px; 
-    height: 50px;
+    width: 80px; 
+    height: 80px;
     display: block;
     margin: auto;
     padding-top: 10px;
@@ -55,23 +53,26 @@ li a {
     border: 20;
 }
 .cart {
-    width: 4em;
+    width: 3.5em;
     height: 3em;
     padding: 10px;
     margin-top: 0.5em;
+    transition: transform 0.3s ease;
 }
 .cart:hover {
-    margin-top: 0.3em;
+    transform: rotate(360deg);
 }
 .desplegable {
     display: none;
     position: absolute;
-    width: 15%;
+    width: fit-content;
     height: fit-content;
     background-color: ghostwhite;
-    border: 2px;
-    border-color: black;
+    border: 1px solid black;
     padding: 0.5em;
+    z-index: 100;
+    border-radius: 5px;
+    margin-left: 5px;
 
 }
 .desplegable>ul{
@@ -86,4 +87,26 @@ li a {
     .desplegable{
         display: block;
     }
+}
+.triangulo {
+  position: absolute;
+  top: -9px;
+  left: 20px;
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid ghostwhite;
+}
+.desplegable ul li:hover {
+  background-color: #e0e0e0;
+}
+
+.nav-items-raya {
+    position: relative;
+    top: 20;
+    background-color: black;
+    width: 2px;
+    height: 1em;
+    border-radius: 100%;
 }
